# eilisch-1

./: .gitignore  collectmp.py  collectmp_cli.py  fix_speech_types.py  match_corrected_data.py  numbers-to-tsv.py  person_freq.csv  pyproject.toml  requirements.txt  test_chat_api.py
extract_scripts/: README.md  collectmp.py  collectmp_cli.py  config.json  corpus_extrator.py  file_handler.py  make_gpt_test_file.ipynb  requirements.txt  speech.py  utils.py
misc_py_scripts/: collectmp_cli.py  freq_to_dict.py  get_parla_text.py  numbers_to_tsv.py  scrape_parla.py
news/: check_data.ipynb  collect_news.py
notebooks/: general_analysis.ipynb  matching_corrected_data.ipynb  prepare_data.ipynb  speech_type_analysis.ipynb  speech_types_compare.ipynb  split_data.ipynb
py_scripts/: collectmp.py  corpus_extrator.py  file_handler.py  gpt_classification.py  speech.py  utils.py
r_scripts/: plot_S_vs_V.R  plot_all_mps.R  plot_main_parties.R  plot_party_vs_all.R  plot_party_vs_all_after_2000.R  plot_party_vs_other.R  plot_party_vs_other_after_2000.R  plot_sex.R
